testcases/pos/labeled/non_annotated_args_does_not_raise_blocking.bard
let fun f(x, y) = x
    val q = 4 raisedTo {secret}
in
    f(q, let val _ = send 3 in 1 end)
end
