testcases/neg/labeled/fun_call_from_secret_context.bard
let fun print() = send "well, hello there"
    val b = true raisedTo {secret}
in
    if b then print()
end
